<resources xmlns:ns1="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" ns1:ignore="ExtraTranslation,MissingTranslation">
    <string name="client_type">phone</string>
    <string name="host">www.lechange.cn:443</string>
    <string name="device_type_choose">select device type</string>
    <string name="device_type_input_hint">please enter the device model</string>
    <string name="device_type_other">other</string>
    <string name="device_type_sure">sure</string>
    <string name="device_type_choose_tip">How to check the device type</string>
    <string name="mobile_common_bec_common_timeout">The network is not working well, please check the network！</string>
    <string name="mobile_common_bec_add_device_valid_error">sc code error</string>
    <string name="mobile_common_bec_device_locked">Sorry, too many attempts have been made for the device password. Your device has been locked. Please power off and restart the device</string>
    <string name="mobile_common_bec_common_network_exception">The network is not strong</string>
    <string name="add_box_tip_confirm_btn" translatable="false">Confirmed, start adding</string>
    <string name="add_box_tip" translatable="false">Please make sure the box can work normally before adding：</string>
    <string name="add_box_tip1" translatable="false">① Plug in the power source, the music box indicator light is white</string>
    <string name="add_box_tip2" translatable="false">② Connect to available networks</string>
    <string name="add_device_box_is_offline" translatable="false">Le Box is not online, please check if it is online</string>
    <string name="assetfont_html" translatable="false">file:///android_asset/htmls/1.htm</string>
    <string name="add_device_not_tip_again" translatable="false">Don\'t prompt next time </string>
    <string name="add_device_input_sn_by_user_not_support_box" translatable="false">*Music box and accessories do not support manual input of serial number to add</string>
    <string name="add_device_timeout_title_tip8">Use a thimble to press and hold the reset hole on the back of the device until the indicator on the front of the device goes out, then click "Restart"</string>
    <string name="add_device_timeout_light_tip9">Green/blue light is on</string>
    <string name="add_device_timeout_add_by_qrcode">Add QR code</string>
    <string name="add_device_timeout_router_failed">Failed to connect to router</string>
    <string name="add_device_timeout_network_failed">Failed to access the network</string>
    <string name="add_device_qrcode_title_tip">Please face the QR code directly to the camera lens</string>
    <string name="add_device_qrcode_msg_tip">Keep the distance at 10-30cm and move slowly back and forth.\nAfter hearing the voice prompt of "QR code scan succeeded", click Next</string>
    <string name="add_device_enable_motion_detect">Turn on the equipment\'s motion check, capture, and video functions</string>
    <string name="add_device_input_sec_code_tip">Please enter the 6-digit security code of the device</string>
    <string name="add_device_input_sec_code_by_user">Please enter the security code</string>
    <string name="add_device_commom_dev_more_than_ten_tip">Sorry, you have tried 10 times, please try again after a 30-minute rest</string>
    <string name="add_device_commom_dev_more_than_ten_twice_tip">I\'m very sorry, you have tried 20 times, take a break and try again tomorrow</string>
    <string name="add_device_commom_dev_ip_error_tip">Your device has been registered on the platform for more than 3 days, and the device and the client must be in the same LAN to bind. Please power off and restart the device</string>
    <string name="add_device_commom_dev_sn_code_conflict_tip">Your device serial number conflicts</string>
    <string name="add_device_input_sn">Please enter the device serial number</string>
    <string name="add_device_title">Device Adding</string>
    <string name="add_device_no_gateway">No associated gateway</string>
    <string name="add_device_choose_related_gateway">Please select the gateway to be associated:</string>
    <string name="add_device_plug_cable_to_device">Please plug the device into the network cable</string>
    <string name="add_device_same_network_tip">Please connect your phone and device to the same network</string>
    <string name="add_device_operation_by_instructions">Please follow the equipment manual</string>
    <string name="add_device_plug_power">Please power on the device</string>
    <string name="add_device_con_wifi">Please connect to a Wi-Fi Network</string>
    <string name="add_device_wifi_ssid">WiFi network:</string>
    <string name="add_device_input_wifi_password">Please enter WiFi password</string>
    <string name="add_device_connect_and_goto_next">It will automatically next step after connection</string>
    <string name="add_device_complete_related_operations">Related operations completed</string>
    <string name="add_device_confirm_same_network">Confirmed to be connected to the same network</string>
    <string name="add_device_add_by_wired">Wired add</string>
    <string name="add_device_scan_lechange_device_qr_code">Please scan the QR code of Lechange device</string>
    <string name="add_device_device_bind_by_yourself">The device is already under your account</string>
    <string name="add_device_switch_to_wired_add">Switch to wired add</string>
    <string name="add_device_switch_to_wireless_add">Switch to wireless add</string>
    <string name="add_device_password_error_and_will_lock">The password is wrong, the device will be locked after 5 consecutive wrongs</string>
    <string name="add_device_scan_device_qr_code">Please scan the QR code on the device</string>
    <string name="add_device_add_bySn">Serial number adding</string>
    <string name="add_device_input_sn_under_device">Please enter the serial number and security code on the device label</string>
    <string name="add_device_confirm_to_connect_correct_wifi">Please make sure that the phone is connected to the WiFi that the device is connected</string>
    <string name="add_device_remember_password">Remember password</string>
    <string name="add_device_device_not_support_5g">The device does not support 5GWiFi</string>
    <string name="add_device_adjust_phone_volume">Please turn up the volume of the phone \n and point the speaker of the phone at the device microphone</string>
    <string name="add_device_keep_phone_close_to_device">Move the phone as close as possible to the device</string>
    <string name="add_device_connect_router_please_wait">Connecting to the router, please wait...</string>
    <string name="add_device_adjust_phone_volume_to_hear_bugu">Please turn up the volume of your mobile phone and aim the speaker of your mobile phone at the device microphone\nmake sure you hear "cuckoo, cuckoo"</string>
    <string name="add_device_set_device_password_for_safety">To strengthen security protection, please set your device password</string>
    <string name="add_device_kindly_reminder">Tips</string>
    <string name="add_device_define_device_password_tip">Device password is Le Orange’s innovative security reinforcement strategy, designed to better protect your device
     Information security. Only by using the correct device password can the audio and video information of the device be obtained. \n When you connect the camera to NVR and other equipment, you need to manually enter the password.
     Please keep it safe: if you forget the password, you can restore the default configuration of the device and then add it to your account to set a new device password</string>
    <string name="add_device_connect_cloud_please_wait">Connecting to the cloud platform, please wait...</string>
    <string name="add_device_binding_to_account">Bind device to account, please wait...</string>
    <string name="add_device_input_device_password">Please enter device password</string>
    <string name="add_device_password_initial_tip">1.If you have set a device password on the Le Orange client or other clients, and have forgotten the password, you can restore the default configuration of the device and add the device again to set a new device password.
         \n 2. If you have never set a device password, and your device label has the words "security code", please enter the 8-digit security code on the device label.</string>
    <string name="add_device_add_successfully">Device added successfully!</string>
    <string name="add_device_name_for_device">Please give the device a name!</string>
    <string name="add_device_time">time</string>
    <string name="add_device_bind_success_quit_tip">Failure to set the time zone may cause abnormalities in services such as cloud storage</string>
    <string name="add_device_detecting_network_safety">Checking network security configuration, please wait...</string>
    <string name="add_device_confrim_to_quit">exit？</string>
    <string name="add_device_not_complete_tip">Setup has not completed. You will need to start over again if exiting. Are you sure you want to proceed?</string>
    <string name="add_device_device_bind_by_other">Sorry, your device has been bound by %s, You can contact him/her to unbind the device</string>
    <string name="add_device_not_support_to_bind">Sorry, it is not currently supported to add devices of this model</string>
    <string name="add_device_tip_not_support_5g_title">Please connect your device to a 2.4 GHz Wi-Fi network.</string>
    <string name="add_device_tip_not_support_5g_1">1. The device does not support 5 GHz Wi-Fi now. If you are using a dual-band router, please ensure that your phone and your device are connected to the same 2.4 GHz network.</string>
    <string name="add_device_tip_not_support_5g_2">2. If you are not sure about the Wi-Fi frequency band that is connected to, please check it on the user manual or the web setup page of the router.</string>
    <string name="add_device_i_need_help">help</string>
    <string name="add_device_connect_timeout">Connection timed out</string>
    <string name="add_device_operation_by_voice_or_light">Please follow the device indicator or voice prompts to select operation</string>
    <string name="add_device_operation_by_voice_tip">Please follow the device indicator or voice prompt</string>
    <string name="add_device_disconnect_power_and_restart">Please power off the device and reconnect the power and click "Restart"</string>
    <string name="add_device_timeout_title_tip7">Please try again or choose another method to add the device</string>
    <string name="add_device_yellow_light_twinkle">restart</string>
    <string name="add_device_red_light_rotate">Red light spinning</string>
    <string name="add_device_green_light_twinkle">Flashing green</string>
    <string name="add_device_blue_light_always">Blue light is always on</string>
    <string name="add_device_red_light_twinkle">Flashing red</string>
    <string name="add_device_red_light_always">Red light is on</string>
    <string name="add_device_green_light_always">Steady green light</string>
    <string name="add_device_continue_to_wait">continue waiting</string>
    <string name="add_device_quit_add_process">Exit to add</string>
    <string name="add_device_restart">Restart</string>
    <string name="add_device_choose_ap">Soft AP add</string>
    <string name="add_device_falshlight_off">Tap to light up</string>
    <string name="common_next2">Next</string>
    <string name="common_local_photo">Scan picture</string>
    <string name="add_device_iot_wifi_choose">Please connect to a Wi-Fi Network</string>
    <string name="add_device_iot_wifi_input_name">Wi-Fi Name</string>
    <string name="add_device_iot_wifi_input_psw">Wi-Fi Password</string>
    <string name="add_device_iot_wifi_remember_psw">Remember the password</string>
    <string name="add_device_iot_wifi_2_4g_only">2.4 GHz Wi-Fi only</string>
</resources>