<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/iotadd_title"
        layout="@layout/iotadd_ac_common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c43"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="30dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/add_device_iot_wifi_choose"
            android:textColor="@color/c40"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_5g_tip"
            style="@style/iotadd_device_help_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/add_device_iot_wifi_2_4g_only"
            android:textColor="@color/iotadd_c41"
            android:textSize="@dimen/sp_14" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:background="@drawable/iotadd_input_bg_gray_line_white_radius">

            <EditText
                android:id="@+id/ssid"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="23dp"
                android:layout_toStartOf="@+id/switch_wifi"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center_vertical|start"
                android:hint="@string/add_device_iot_wifi_input_name"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/c40"
                android:textColorHint="@color/c42"
                android:textDirection="locale"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/switch_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:src="@drawable/iotadd_device_icon_iot_switchwifi" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/iotadd_input_bg_gray_line_white_radius">

            <com.mm.android.mobilecommon.widget.ClearPasswordEditText
                android:id="@+id/wifi_pwd"
                style="@style/TextAppearance.17sp_lc_black_color"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginStart="23dp"
                android:background="@null"
                android:gravity="center_vertical|start"
                android:hint="@string/add_device_iot_wifi_input_psw"
                android:imeOptions="actionDone"
                android:paddingEnd="18dp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/c40"
                android:textColorHint="@color/c42"
                android:textDirection="locale" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/wifi_pwd_check"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/iotadd_cb_style"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/add_device_iot_wifi_remember_psw"
                android:textColor="@color/c41"
                android:textSize="14sp" />


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/next"
                style="@style/iotadd_device_btn_style"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="7.5dp"
                android:layout_marginEnd="7.5dp"
                android:layout_marginBottom="0dp"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/common_next2" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

