<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:scanview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mm.android.dhqrscanner.DHScannerView
        android:id="@+id/lc_scanview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#88000000" />

        <com.mm.android.dhqrscanner.ScannerStyleView
            android:id="@+id/lc_scannerstyle_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="100dp"
            scanview:dhscanner_cornerColor="@color/c43"
            scanview:dhscanner_cornerLineLength="35dp"
            scanview:dhscanner_cornerStrokeSize="2dp"
            scanview:dhscanner_scanLineDrawable="@drawable/adddevice_qrcode_scanline"
            scanview:dhscanner_scanLineIsGrid="true"
            scanview:dhscanner_scanLineMoveTime="1000"
            scanview:dhscanner_scanLineNeedReverse="false"
            scanview:dhscanner_scanLineStrokeSize="6dp"
            scanview:dhscanner_scanMaskColor="#88000000"
            scanview:dhscanner_scanRectHeight="239dp"
            scanview:dhscanner_scanRectInCenter="true"
            scanview:dhscanner_scanRectMarginTop="65dp"
            scanview:dhscanner_scanRectWidth="239dp" />

        <TextView
            android:id="@+id/tv_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lc_scannerstyle_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:drawableTop="@drawable/adddevice_pic_flashlight_off"
            android:drawablePadding="9dp"
            android:text="@string/add_device_falshlight_off"
            android:textColor="@color/c43"
            android:textSize="@dimen/f3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lc_scannerstyle_view"
            android:background="#88000000" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lc_scannerstyle_view"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/v_bg"
                android:layout_width="239dp"
                android:layout_height="0dp"
                android:background="@drawable/adddevice_scan_dark_bg"
                scanview:layout_constraintBottom_toBottomOf="parent"
                scanview:layout_constraintEnd_toEndOf="parent"
                scanview:layout_constraintStart_toStartOf="parent"
                scanview:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="60dp"
                android:layout_height="43dp"
                android:scaleType="fitCenter"
                android:src="@drawable/adddevice_pic_qr_tip"
                scanview:layout_constraintBottom_toBottomOf="@id/v_bg"
                scanview:layout_constraintStart_toStartOf="@id/v_bg"
                scanview:layout_constraintTop_toTopOf="@id/v_bg" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mobile_common_dp_8"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/add_device_scan_device_qr_code"
                android:textColor="@color/c43"
                android:textSize="12dp"
                scanview:layout_constraintBottom_toBottomOf="parent"
                scanview:layout_constraintEnd_toEndOf="@id/v_bg"
                scanview:layout_constraintStart_toEndOf="@id/iv_img"
                scanview:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/next_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_45"
                android:layout_weight="1"
                android:drawableTop="@drawable/adddevice_pic_number"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:singleLine="true"
                android:text="@string/add_device_add_bySn"
                android:textColor="@color/c43"
                android:textSize="@dimen/f2" />

            <TextView
                android:id="@+id/phone_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_45"
                android:layout_weight="1"
                android:drawableTop="@drawable/adddevice_pic_album"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:singleLine="true"
                android:text="@string/common_local_photo"
                android:textColor="@color/c43"
                android:textSize="@dimen/f2" />

        </LinearLayout>


    </com.mm.android.dhqrscanner.DHScannerView>

</LinearLayout>